fixed some css including navbar on mobile

--- a/big-style.css
+++ b/big-style.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 678px) {
+@media screen and (min-width: 900px) {
     body {
         min-height: 100vh;
         display: flex;
@@ -18,6 +18,7 @@
     section{
         height:100%;
         margin: 15vw 0;
+        width:100vw;
         padding:2em;
         transform: rotate(90deg);
         z-index: -1;
