--- a/small-style.css
+++ b/small-style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 900px) {
   p {
     padding: 0.1em;
   }
@@ -12,10 +12,16 @@
         display: flex;
         position: fixed;
         top: 0;
+        height: 2em;
     }
 
     .burger {
         display: inline;
+        position: absolute;
+        right: 1em;
+    }
+    .flex-container{
+      margin-bottom: 15vh;
     }
     .logo {
       font-size: small;
@@ -29,9 +35,9 @@
         background: #41ad8f;
         position: absolute;
         right: -100%;
-        top: 70px;
+        top: 2em;
         width: 50%;
-        height: calc(100% - 70px);
+        //height: calc(100% - 70px);
         flex-direction: column;
         justify-content: space-around;
         padding: 0;
@@ -39,10 +45,13 @@
     }
     .navlink {
         text-align: center;
+        background-color: #fff;
+        padding: 0.5em 0;
     }
 
     .nav-active {
         right: 0;
+        border: 2px outset #1cd6b3;
     }
     .picture {
       margin: auto;
